--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type":"module",
+  "type": "module",
   "name": "supertest-sandobox",
   "version": "1.0.0",
   "description": "",
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/hiyasichuka/supertest-sandobox#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "supertest": "^6.2.4"
   }
 }
