--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
+    "jest": "^29.0.3",
     "supertest": "^6.2.4"
   }
 }
