--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,8 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ,add/ci ]
-
+    branches:
+      - main
+      - 'feat/**'
 jobs:
   build:
 
